# vscode_cmake_debug_test

./: CMakeLists.txt
include/: test.h
src/: main.cpp  test.cpp
win10配置CMake的过程/: Win10安装CMake和GCC.md
